RESOLVED FIXED119754
[BlackBerry] WebPage doesn't zoom to fit viewport after being rotated from landscape to portrait mode
https://bugs.webkit.org/show_bug.cgi?id=119754
Summary [BlackBerry] WebPage doesn't zoom to fit viewport after being rotated from la...
Jacky Jiang
Reported 2013-08-13 09:17:02 PDT
JIRA:13333.
Attachments
Patch (3.67 KB, patch)
2013-08-13 09:34 PDT, Jacky Jiang
no flags
Jacky Jiang
Comment 1 2013-08-13 09:34:17 PDT
Rob Buis
Comment 2 2013-08-13 12:53:28 PDT
Comment on attachment 208641 [details] Patch Looks good.
WebKit Commit Bot
Comment 3 2013-08-13 15:50:32 PDT
Comment on attachment 208641 [details] Patch Clearing flags on attachment: 208641 Committed r154029: <http://trac.webkit.org/changeset/154029>
WebKit Commit Bot
Comment 4 2013-08-13 15:50:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.